# bringup

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  arm-none-eabi-gcc.cmake  build.sh  build_image.py  memory_layout.ld  startup.s  write_crc.py  write_header.py
core/: FreeRTOSConfig.h  freertos_hooks.c  freertos_hooks.cpp  freertos_hooks.h  lv_conf.h  main.cpp  stm32f7xx_hal_msp.c  stm32f7xx_hal_timebase_tim.c  syscalls.c  syscalls.h
core/assert/: CMakeLists.txt
core/assert/inc/: assert.h
core/assert/src/: assert.cpp
core/board_defines/inc/: gpio_defines.h  stm32f7xx_hal_conf.h
core/bootloader/: CMakeLists.txt
core/bootloader/inc/: sdram_init.h
core/bootloader/src/: bootloader.cpp  sdram_init.cpp
core/crc/: CMakeLists.txt
core/crc/inc/: crc.h
core/crc/src/: crc.cpp
core/crc32/: CMakeLists.txt
core/crc32/inc/: crc32.h
core/crc32/src/: crc32.cpp
core/flash/: CMakeLists.txt
core/flash/inc/: flash.h
core/flash/src/: flash.cpp
core/fw_header/: CMakeLists.txt
core/fw_header/inc/: fw_header.h
core/fw_header/src/: fw_header.cpp
core/fw_image/: CMakeLists.txt
core/fw_image/inc/: fw_image.h
core/fw_image/src/: fw_image.cpp
core/fw_tasks/: CMakeLists.txt
core/fw_tasks/inc/: fw_tasks.h  input_task_msgs.h  lcd_task_msgs.h  main_task_msgs.h  uart_task_msgs.h
core/fw_tasks/src/: input_task.cpp  lcd_task.cpp  main_task.cpp  uart_task.cpp
core/fw_update/: CMakeLists.txt
core/fw_update/inc/: fw_update.h
core/fw_update/src/: fw_update.cpp
core/interrupts/inc/: stm32f7xx_it.h
core/interrupts/src/: stm32f7xx_it.c
core/lcd/: CMakeLists.txt
core/lcd/inc/: lcd.h
core/lcd/src/: lcd.cpp
core/memory_layout/: app_memory_layout.ld  bl_memory_layout.ld  memory_layout.ld
core/memory_layout/inc/: memory_layout.h
core/print/: CMakeLists.txt
core/print/inc/: print.h
core/print/src/: print.cpp
core/shared_data/: CMakeLists.txt
core/shared_data/inc/: shared_data.h
core/shared_data/src/: shared_data.cpp
core/src/: main.cpp
core/uart/: CMakeLists.txt
core/uart/inc/: uart.h
core/uart/src/: uart.cpp  uart_xmodem.cpp
core/usb_host/: CMakeLists.txt
core/usb_host/inc/: usb_host.h  usbh_conf.h  usbh_platform.h
core/usb_host/src/: usb_host.cpp  usbh_conf.c  usbh_platform.c
